bug: fixed "Email" mailto reference in Contact Section

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           <div class="col-md-12 text-center">
             <p class="mb-0">
               <span class="icon-mail_outline d-block h4 text-primary"></span>
-              <a href="mailto: cristianstclair@email.com"> Email </a>
+              <a href="mailto: cristianstclair@gmail.com"> Email </a>
             </p>
           </div>
 
