feat: added video to Pokemon Project

--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@
         <div class="row">
           <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
 
-            <img src="" alt="Image of your project" class="img-fluid">
+            <video width="1280" height="720" controls>
+              <source src="resources/Pokemon_Simulator_Demo.mov" type="video/mov">
+            </video>
 
           </div>
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
@@ -148,12 +150,8 @@
                 of this project, but it is still a ton of fun to be able to build your team and to grow with your
                 Pokémon.
               </p>
-              <p>
-                Project design
-              </p>
-              <p>
-                Implementation
-              </p>
+              <h4>Project design</h4>
+              <h4>Implementation</h4>
 
 
             </div>
