--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 Moves (also referenced as Attacks are) all implemented through a Move interface. Attacks in Pokemon are unique in 3 distinct ways. All Moves have an associated type with it 
                 (Thunderbolt is an Electric type Move), an Attack Type (Thunderbolt is a Special Attack), and a Power Value (Thunderbolt has a Power Value of 90). Moves in the Pokémon games tend
                 to have more unique effects, such as priority, but we wanted to focus the core of our gameplay around the basics of moves. Our moves are also not accuracy dependent. In the games, attacks,
-                especially stronger ones, can have more varying accuracies compared to guarunteed hits. These moves can be learned by Pokémon when they reach high enough levels or when they evolve into stronger Pokémon.
+                especially stronger ones, can have more varying accuracies compared to guaranteed hits. These moves can be learned by Pokémon when they reach high enough levels or when they evolve into stronger Pokémon.
               </p>
               <p>
                 Trainers (and players) are the puppet masters when it comes to the Pokémon games. As a trainer, it is up to you to pick your starter Pokémon, catch new Pokémon, train your team, and battle your enemies. This is the core of the
